--- a/CarniumWeb/styles/main.css
+++ b/CarniumWeb/styles/main.css
@@ -13,6 +13,7 @@ body{
 
   nav{
     display: flex;
+    justify-content: center;
     flex-grow: wrap;
     background-color: #1e1e1b;
     position: relative;
