--- a/CarniumWeb/styles/main.css
+++ b/CarniumWeb/styles/main.css
@@ -410,3 +410,148 @@ footer{
   border-bottom-color: black;
   margin-top: 320px;
 }
+
+/* PAGE CONTACT*/
+
+/* block de tete */
+
+.head_block{
+  position: relative;
+  display: flex; 
+  justify-content: center;
+}
+
+.head_block .head_black{
+  height: 300px;
+  width: 100%;
+  background: black;
+}
+
+.head_block h2{
+  position: absolute;
+  color: crimson;
+  margin-top: 110px;
+  font-size: 35px;
+}
+
+/*titraille*/ 
+
+.head_welcome{
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 35px;
+}
+
+.line_horizon{
+  border-top: solid;
+  border-top-color: black; 
+  width: 370px;
+  margin-top: 50px;
+  border-top-width: 0.5px;
+}
+
+.head_welcome h3{
+  font-style: italic;
+  font-size: 25px;
+  margin-top: 35px;
+}
+
+
+/* design du formulaire */
+
+.form_title h4{
+  font-size: 20px;
+}
+
+input[type=text], [type=email], [type=number] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+#msg{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+label{
+  font-size: 13px;
+}
+
+.form_title p{
+  font-size: 15px;
+}
+
+.resa_contain{
+  width: 960px; 
+  margin: 0 auto;
+  margin-top: 80px;
+  display: flex;
+}
+
+.form_container{
+  width: 480px; 
+}
+
+.form_title{
+  display: flex; 
+  align-items: center;
+  flex-direction: column;
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+button{
+  height:30px;
+  width: 150px;
+  border-radius: 15px;
+  background-color:black;
+  border-color: black;
+  color: white;
+}
+
+button:hover{
+  color: red;
+  height:50px;
+  width: 180px;
+  border-radius: 30px;
+}
+
+/* design de la section droite avec les infos */
+
+.info_supp{
+  width: 480px; 
+}
+
+.resto_data{
+  width: 200px;
+  padding-left: 130px;
+  padding-top: 80px;
+}
+
+.open_hour{
+  width: 200px;
+  padding-left: 130px;
+  padding-top: 30px;
+}
+
+.open_hour p:last-of-type{
+  color: red;
+}
+
+/*FIN PAGE CONTACT*/
