--- a/CarniumWeb/styles/main.css
+++ b/CarniumWeb/styles/main.css
@@ -279,9 +279,15 @@ body{
   background: url("../images/image3.jpeg"); 
   background-size: 1440px 900px;
   background-attachment: fixed;
-  position: relative;
 }
-.concept{
+.container_first{
+  margin: 0 auto; 
+  width: 1440px;
+  height: 600px;
+  background-color: #FFF;
+}
+
+/* .concept{
   position: absolute;
   top : 0;
   right : 0;
@@ -299,29 +305,115 @@ body{
   width: 1440px;
   height: 400px;
   background-color: #FFF;
-}
+} */
 
 /* BackGround2 */
 
 .background2{
   width: 1440px;
-  height: 900px;
+  height: 1400px;
   background: url("../images/image2.jpeg"); 
   background-size: 1440px 900px;
   background-attachment: fixed;
   position: relative;
 }
 
-.Histoire{
-  position: absolute;
-  top : 0;
-  right : 0;
+.container_second{
   margin: 0 auto; 
   width: 1440px;
-  height: 200px;
+  height: 1200px;
   background-color: #FFF;
-  
+} 
+
+.Histoire{
+  display: flex;
+  flex-wrap: wrap;
 }
+
+.h2Histoire{
+  display: flex;
+  justify-content: center;
+  margin: 20PX auto;
+  font-size: 2.6em;
+  width: 100%;
+}
+hr{
+  margin: 20px auto;
+  width: 30%;
+  height: 0px;
+  border: black 2px solid;
+}
+.pageLeftHistoire{
+  width: 50%;
+} 
+ .imageHistoire{
+  margin: 0 auto;
+  padding: 0;
+  width: 50%;
+}
+.imageHistoire img{
+  margin-left: 90px;
+  width: 50%;
+}
+.pageLeftHistoire p {
+  margin: 0 auto;
+  width: 50%;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  padding: 15px 0;
+}
+
+.pageRightHistoire{
+  width: 50%;
+}
+
+.pageRightHistoire p {
+  margin: 0 auto;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  padding: 15px 0;
+  text-align: justify;
+}
+
+.Partenaires{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.h2Partenaires{
+  display: flex;
+  justify-content: center;
+  margin: 20PX auto;
+  font-size: 2.6em;
+  width: 100%;
+}
+
+.partenaires_column{
+  width: 25%;
+  margin: 0 auto;
+  padding: 0;
+
+}
+
+.partenaires_column img{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.partenaires_column h4{
+  text-align: center;
+  font-size: 1.6em;
+}
+
+.partenaires_column p{
+  margin: 0 auto;
+  text-align: center;
+  font-size: 1.2em;
+  line-height: 1.4em;
+  width: 50%;
+}
+/* 
 .Team{
   position: absolute;
   top : 200px;
@@ -331,15 +423,7 @@ body{
   height: 400px;
   background-color: #FFF;
 }
-.Partenaires{
-  position: absolute;
-  top : 200px;
-  right : 0;
-  margin: 0 auto; 
-  width: 1440px;
-  height: 400px;
-  background-color: #FFF;
-} 
+*/
 /* footer */
 
 a{
@@ -514,7 +598,7 @@ label{
 .button{
   display: flex;
   justify-content: center;
-  margin-top: 30px;
+  margin: 30px;
 }
 
 button{
@@ -524,13 +608,14 @@ button{
   background-color:black;
   border-color: black;
   color: white;
+  transition: color 0.4s ease,  transform 0.4s;
 }
 
 button:hover{
   color: red;
-  height:50px;
-  width: 180px;
   border-radius: 30px;
+  transform: scale(1.2);
+  transition: color 0.4s ease, transform 0.4s;
 }
 
 /* design de la section droite avec les infos */
