--- a/CarniumWeb/styles/main.css
+++ b/CarniumWeb/styles/main.css
@@ -1,20 +1,29 @@
 body{
-    margin:0;
+    margin:0 auto;
+    /* width: 100vmax; */
+    width: 100%;
+    /* max-width: 1440px; */
     padding:0;
     font-family: "MONTSERRAT", "Arial", sans-serif;
-    font-size:14px;
+    font-size: 14px;
     min-height : 100%;
     overflow-x: hidden;
+    background-color: red;
   } 
 
   /*
     HEADER
   */
+  
+  /* header{
+    display: flex;
+    justify-content: center
+  }  */
 
   nav{
     display: flex;
+    width: 100%;
     justify-content: center;
-    flex-grow: wrap;
     background-color: #1e1e1b;
     position: relative;
     height : 60px;
@@ -35,14 +44,13 @@ body{
   .containerHeader{
     display: flex;
     justify-content: space-between;
-    width: 850px;
     margin: 0;
     padding: 0;
   }
  .menuItem{
     box-sizing: border-box;
     list-style: none;
-    padding-top: 25px; 
+    padding: 25px 15px 0 15px; 
   }
   .menuItem a{
     transition: color 0.4s ease;
@@ -132,8 +140,31 @@ body{
   font-family: FontAwesome;
 }
 */
+
+/* .container_aceuil{
+  margin: 0 auto;
+  width: 100%;
+  min-width: 1024px;
+  display: flex;
+  flex-direction: column;
+} */
+
+.container_aceuil{
+  margin: 0 auto;
+  width: 100%;
+  min-width: 1024px;
+  display: flex;
+  flex-direction: column;
+}
+
 .container{
   position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+#carousel1{
+  width: 100%;
 }
 .item{
   margin: 0px auto;
@@ -286,7 +317,61 @@ body{
   height: 600px;
   background-color: #FFF;
 }
+.concept{
+  display: flex;
+  flex-wrap: wrap;
+}
+.concept_container1{
+  margin: 0 auto;
+  width: 33.33%
+}
+.concept_container2{
+  margin: 0 auto;
+  width: 33.33%
+}
+.concept_container3{
+  margin: 0 auto;
+  width: 33.33%
+}
+.concept_container1 img, .concept_container2 img, 
+.concept_container3 img{
+  display: flex;
+  margin: 10px auto;
+  padding: 0;
+  /* margin-left: 90px; */
+  width: 30%;
+}
 
+.concept_container1 h3, .concept_container2 h3, 
+.concept_container3 h3{
+  display: flex;
+  justify-content: center;
+  margin: 15px auto;
+  font-size: 2em;
+  width: 100%;
+  line-height: 1.2em;
+}
+
+.concept_container1 p, .concept_container2 p, 
+.concept_container3 p{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 15px auto;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  text-align: justify;
+}
+
+.imge_prix1, .imge_prix2, .imge_prix3{
+  display: flex;
+  margin: 10px auto;
+  /* margin-left: 90px; */
+  width: 30%;
+}
+.imge_prix1{
+
+}
 /* .concept{
   position: absolute;
   top : 0;
