--- a/CarniumWeb/styles/main.css
+++ b/CarniumWeb/styles/main.css
@@ -151,16 +151,16 @@ body{
 
 .container_aceuil{
   margin: 0 auto;
-  width: 100%;
-  min-width: 1024px;
+  /* width: 100vw; */
+  /* min-width: 1024px; */
   display: flex;
   flex-direction: column;
 }
 
 .container{
   position: relative;
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
 }
 
 #carousel1{
@@ -179,7 +179,7 @@ body{
 }
 
 .item__image img{
-  width: 1440px;
+  width: 100%;
   height: 900px;
   display: block;
 }
@@ -250,7 +250,7 @@ body{
   margin: 0 auto;
   top: 10%;
   right: 42%;
-  width: auto;
+  /* width: auto; */
 }
 .containerResevation img{
   display: flex;
@@ -305,7 +305,8 @@ body{
 /* BackGround1 */
 
 .background{
-  width: 1440px;
+  margin: 0 auto;
+  width: 100%;
   height: 900px;
   background: url("../images/image3.jpeg"); 
   background-size: 1440px 900px;
@@ -313,7 +314,7 @@ body{
 }
 .container_first{
   margin: 0 auto; 
-  width: 1440px;
+  width: 100%;
   height: 600px;
   background-color: #FFF;
 }
@@ -395,7 +396,8 @@ body{
 /* BackGround2 */
 
 .background2{
-  width: 1440px;
+  margin: 0 auto;
+  width: 100%;
   height: 1400px;
   background: url("../images/image2.jpeg"); 
   background-size: 1440px 900px;
@@ -405,7 +407,7 @@ body{
 
 .container_second{
   margin: 0 auto; 
-  width: 1440px;
+  width: 100%;
   height: 1200px;
   background-color: #FFF;
 } 
