--- a/styles/main.css
+++ b/styles/main.css
@@ -842,7 +842,7 @@ button:hover{
 
   .burger {
     display: block;
-    padding-top: 20px;
+    padding-top: 15px;
     margin: 0 10px;
     width: 25%;
     cursor: pointer;
@@ -854,7 +854,7 @@ button:hover{
     margin: 0 auto;
     position: relative;
     width: 50px;
-    height: 10px;
+    height: 1.4vw;
     background-color: #c21626;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -910,6 +910,72 @@ button:hover{
     font-size: 2vw;
     text-decoration: none;
   }
+
+  /* SLIDEER */
+
+
+.container{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+#carousel1{
+  width: 100%;
+  height: 100%;
+}
+.item{
+  margin: 0px auto;
+  width: 100%;
+  height: 100%;
+  transform: translate3d(0, -1px, 0);
+  overflow: hidden;
+}
+
+.items{
+  position: relative
+}
+
+.item__image img{
+  width: 100%;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+
+.carousel__container{
+  transition: transform 0.3s;
+  transform: translate3d(0,0,0 )
+}
+
+.carousel__prev{
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  background-size: 15px 15px;
+
+}
+.carousel__next{
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  background-size: 15px 15px;
+}
+
+.carousel__next:hover, .carousel__prev:hover{
+  transform: scale(1.2)
+}
+
+.carousel__prev--hidden{
+  opacity: 0;
+}
+.carousel__next--hidden{
+  opacity: 0;
+}
+
+
 }
 
 /* 
