--- a/styles/main.css
+++ b/styles/main.css
@@ -806,7 +806,7 @@ button:hover{
 
 /* @media  screen and  (orientation: landscape) and (min-width: 768px) and (max-width: 1024px) { */
 
-@media  screen and (min-width: 168px) and (max-width: 1024px) {
+@media  screen and (orientation : portrait) and (min-width: 168px) and (max-width: 1024px) {
   nav {
     display: flex;
     justify-content: space-between;
