--- a/styles/main.css
+++ b/styles/main.css
@@ -354,7 +354,7 @@ body{
   width: 100%;
   height: 900px;
   background: url("../images/image6.jpeg"); 
-  background-size: 1440px 900px;
+  background-size: 100% 100%;
   background-attachment: fixed;
 }
 .container_first{
@@ -461,9 +461,9 @@ width: 100%;
 .background2{
   margin: 0 auto;
   width: 100%;
-  height: 200vh;
+  height: 250vh;
   background: url("../images/image8.jpeg"); 
-  background-size: 1440px 900px;
+  background-size: 100% 100%;
   background-attachment: fixed;
   position: relative;
 }
@@ -479,6 +479,11 @@ width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
+/* 
+#Team{
+  display: flex;
+  flex-wrap: wrap;
+} */
 
 .h2Histoire{
   display: flex;
@@ -588,6 +593,7 @@ hr{
   display: flex;
   align-items: center;
   /* flex-wrap: nowrap; */
+  margin-left : 10%;
   width: 80%;
 }
 
