--- a/styles/main.css
+++ b/styles/main.css
@@ -360,7 +360,7 @@ body{
 .container_first{
   margin: 0 auto; 
   width: 100%;
-  height: 600px;
+  height: auto;
   background-color: #000;
 }
 #menu{
@@ -422,7 +422,7 @@ width: 100%;
 }
 
 .prix_menu1, .prix_menu2, .prix_menu3{
-  margin: 0 auto;
+  margin: 20px auto;
   position: absolute;
   bottom: 0;
   right: 38%; 
@@ -461,7 +461,7 @@ width: 100%;
 .background2{
   margin: 0 auto;
   width: 100%;
-  height: 250vh;
+  height: 2000px;
   background: url("../images/image8.jpeg"); 
   background-size: 100% 100%;
   background-attachment: fixed;
@@ -471,7 +471,7 @@ width: 100%;
 .container_second{
   margin: 0 auto; 
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #000;
 } 
 
@@ -531,7 +531,7 @@ hr{
   text-align: justify;
 }
 
-
+/* TEAM */
 
 .item1{
   margin: 50px auto;
@@ -584,7 +584,7 @@ width: 100%;
 
 .partenaires_column{
   width: 25%;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 0;
 
 }
@@ -601,7 +601,7 @@ width: 100%;
 }
 
 .partenaires_column p{
-  margin: 0 auto;
+  margin: 20px auto;
   text-align: center;
   font-size: 1.2vw;
   line-height: 1.4vw;
@@ -640,7 +640,7 @@ footer{
   flex-wrap: nowrap;
   width : 960px;
   margin: 0 auto;
-  height: 500px;
+  /* height: 500px; */
 }
 
 .info{
@@ -690,7 +690,7 @@ footer{
   border-top-width: 1px;
   border-bottom: solid; 
   border-bottom-color: black;
-  margin-top: 320px;
+  margin-top: 300px;
 }
 
 /* PAGE CONTACT*/
