--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,11 @@ html{
 
 @font-face {
 font-family: "Rosarina";
-src: url('../font/rosarina.ttf');
+src: url('../font/rosarina.otf');
+}
+@font-face{
+  font-family: "MontserratRegular";
+  src: url('../font/Montserrat/Montserrat-Regular.ttf')
 }
 
 body{
@@ -63,12 +67,12 @@ nav{
 .menuItem{
   box-sizing: border-box;
   list-style: none;
-  padding: 32px 30px 0px 10px;
+  padding: 32px 30px 0px 12px;
 }
 .menuItem a{
   transition: color 0.4s ease;
   color: white;
-  font-size: 1.26vw;
+  font-size: 18px;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -109,7 +113,7 @@ a:hover{
   background-image: url("../images/SVG/facebookRouge.svg");
   background-size: 60px;
   transition: visibility 1s ease, background-image 1s ease;
-} */
+}  */
 /* .imageLogoInstagram a img:hover{
   background-image: url("../images/SVG/instagramRouge.svg");
   transition: color 2s ease;
@@ -152,9 +156,13 @@ flex-direction: column;
 }
 
 .container{
-position: relative;
-width: 100%;
-margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
 }
 
 #carousel1{
@@ -195,34 +203,36 @@ float: left;
 }
 
 .carousel__prev{
-position: absolute;
-width: 50px;
-height: 50px;
-background: #FFF url(../images/SVG/left-arrow.svg) center center no-repeat;
-background-size: 30px 30px;
-border-radius: 50%;
-opacity: .5;
-top: 50%;
-margin-top: -50px;
-left : 20px;
-box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
-cursor: pointer;
-transition: transform 0.3s, opacity 0.3s;
-}
+  z-index: 100;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background: #FFF url(../images/SVG/left-arrow.svg) center center no-repeat;
+  background-size: 30px 30px;
+  border-radius: 50%;
+  opacity: .5;
+  top: 50%;
+  margin-top: -50px;
+  left : 20px;
+  box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+  cursor: pointer;
+  transition: transform 0.3s, opacity 0.3s;
+  }
 .carousel__next{
-position: absolute;
-width: 50px;
-height: 50px;
-background: #FFF url(../images/SVG/right-arrow.svg) center center no-repeat;
-background-size: 30px 30px;
-border-radius: 50%;
-opacity: .5;
-top: 50%;
-margin-top: -50px;
-right : 20px;
-box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
-cursor: pointer;
-transition: transform 0.3s, opacity 0.3s;
+  z-index: 100;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background: #FFF url(../images/SVG/right-arrow.svg) center center no-repeat;
+  background-size: 30px 30px;
+  border-radius: 50%;
+  opacity: .5;
+  top: 50%;
+  margin-top: -50px;
+  right : 20px;
+  box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+  cursor: pointer;
+  transition: transform 0.3s, opacity 0.3s;
 }
 
 .carousel__next:hover, .carousel__prev:hover{
@@ -240,45 +250,33 @@ opacity: 0;
 /* reservation */
 
 .containerResevation{
-position: absolute;
-margin: 0 5%;
-top: 27%;
-width: 90%;
+  position: absolute;
+  margin: 0 auto;
+  top: 25%;
+  width: 100%;
 }
 .containerResevation img{
-display: flex;
-margin: 5px auto;
-width: 8%;
-height: 8%;
+  display: flex;
+  margin: 5px auto;
+  width: 10%;
 }
 .containerResevation h3, .containerResevation h4{
-margin: 10px auto;
-text-align: center;
-font-size: 2.4vw;
-color: #c21626;
-}
-.containerResevation h4{
-font-size: 2vw;
-
+  margin: 7px auto;
+  text-align: center;
+  font-size: 42px;
+  color: #c21626;
+  letter-spacing: 2px;
 }
 .containerResevation a {
-position: absolute;
-width: 10%;
-height: 55px;
-left: 45%;
-padding: 5px;
-background-color: rgb(255, 92, 92);
-border: solid rgba(193, 22, 38, 1) 2px;
-border-radius: 30px;
-cursor: pointer;
-text-decoration: none;
-transition: border-color 0.3s ease 0s, background-color 0.3s ease 0s, transform 0.3s ease 0s ;
+  cursor: auto;
+  letter-spacing: 1.2px;
+  text-decoration: none;
 }
-.containerResevation a:hover{
-background-color:rgba(193, 22, 38, 1);
-border-color: #1e1e1b;
-transition: border-color 0.3s ease 0s, background-color 0.3s ease 0s, transform 0.3s ease 0s ;
-transform: scale(1.2);
+.containerResevation a span:hover{
+  background-color: rgb(30, 30, 27);
+  border-color: rgb(30, 30, 27);
+  transition: border-color 0.3s ease 0s, background-color 0.3s ease 0s, transform 0.3s ease 0s ;
+  transform: scale(1.25);
 }
 
 /* .containerResevation:hover img ~ .containerResevation a:hover {
@@ -286,17 +284,22 @@ transform: scale(1.2);
 transition: transform 1s;
 } */
 .containerResevation a span{
-display: flex;
-justify-content: center;
-color: #FFF;
-line-height: 45px;
-font-size: 1.3vw;
-transition:color 0.3s ease 0s;
-}
-
-.containerResevation a:hover span{
-color:#1e1e1b;
-transition:color 0.4s ease 0s;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  color: #FFF;
+  line-height: 50px;
+  font-size: 20px;
+  transition:color 0.3s ease 0s;
+  width: 150px;
+  height: 50px;
+  padding: 0px;
+  margin: 0 auto;
+  background-color: rgba(193, 22, 38, 1);
+  border: solid rgba(193, 22, 38, 1) 2px;
+  border-radius: 30px;
+  transition:color 0.4s ease 0s;
+  transition: border-color 0.3s ease 0s, background-color 0.3s ease 0s, transform 0.3s ease 0s ;
 }
 
 
@@ -346,13 +349,46 @@ perspective: 1000px;
 100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
+/* livraison */
+
+#livraison{
+padding-bottom: 50px;
+}
+.livraisonImage{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.linkUber{
+  margin: 35px auto;
+  display: flex;
+  justify-content: center;
+}
+.linkUber a {
+  font-size: 22px;
+  text-decoration: none;
+  padding: 25px;
+  color: #ccc;
+  background-image:radial-gradient(#a95860, #96222d);
+  border-radius: 10px;
+  padding: 20px;
+  transition: background-color, transform 0.8s;
+}
+
+.linkUber a:hover{
+  transform: scale(1.2);
+  background-image: none;
+  background-color: #c21626;
+  transition: background-color, transform 0.8s;
+}
+
 
 /* BackGround1 */
 
 .background{
 margin: 0 auto;
 width: 100%;
-height: 900px;
+height: 1700px;
 background: url("../images/image6.jpeg");
 background-size: 100% 100%;
 background-attachment: fixed;
@@ -366,34 +402,35 @@ background-color: #000;
 #menu{
 display: flex;
 flex-wrap: wrap;
+margin-bottom:  50px;
 }
-.h2NotreConcept{
+.h2NotreFormule, .h2Livraison, .h2Glocalisation{
 display: flex;
 justify-content: center;
 margin: 20PX auto;
-font-size: 2.6vw;
+font-size: 45px;
 width: 100%;
 }
-.concept_container1{
-margin: 0 auto;
+.formule_container1{
+margin: 15px auto;
 width: 33.33%;
 position: relative;
 height: 500px;
 }
-.concept_container2{
-margin: 0 auto;
+.formule_container2{
+margin: 15px auto;
 width: 33.33%;
 position: relative;
 height: 500px;
 }
-.concept_container3{
-margin: 0 auto;
+.formule_container3{
+margin: 15px auto;
 width: 33.33%;
 position: relative;
 height: 500px;
 }
-.concept_container1 img, .concept_container2 img,
-.concept_container3 img{
+.formule_container1 img, .formule_container2 img,
+.formule_container3 img{
 display: flex;
 margin: 10px auto;
 padding: 0;
@@ -401,43 +438,46 @@ padding: 0;
 width: 30%;
 }
 
-.concept_container1 h3, .concept_container2 h3,
-.concept_container3 h3{
+.formule_container1 h3, .formule_container2 h3,
+.formule_container3 h3{
 display: flex;
 justify-content: center;
-margin: 15px auto;
-font-size: 2vw;
+margin: 30px auto;
+font-size: 40px;
 width: 100%;
-line-height: 1.2vw;
+line-height: 45px;
 }
 
-.concept_container1 p, .concept_container2 p,
-.concept_container3 p{
-display: flex;
-justify-content: center;
-width: 100%;
-font-size: 1.2vw;
-line-height: 1.2vw;
-text-align: justify;
+.formule_container1 p, .formule_container2 p,
+.formule_container3 p{
+  margin: 15px auto;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 20px;
+  text-align: justify;
 }
 
+.imagePlus{
+  margin: 0px auto;
+  height: 30px;
+  width: 30px;
+}
 .prix_menu1, .prix_menu2, .prix_menu3{
-margin: 20px auto;
-position: absolute;
-bottom: 0;
-right: 38%;
-width: 90px;
-height: 90px;
-border: 6px solid #FFF;
-border-radius: 50%;
+  margin: 20px auto;
+  width: 90px;
+  height: 90px;
+  border: 6px solid #FFF;
+  border-radius: 50%;
 }
+
 .prix_menu1 p, .prix_menu2 p, .prix_menu3 p{
 text-align: center;
-margin :35px auto;
-font-size: 1.9vw;
+margin :20px auto;
+font-size: 26px;
 }
 
-/* .concept{
+/* .formule{
 position: absolute;
 top : 0;
 right : 0;
@@ -462,7 +502,7 @@ background-color: #FFF;
 .background2{
 margin: 0 auto;
 width: 100%;
-height: 2000px;
+height: 1600px;
 background: url("../images/image8.jpeg");
 background-size: 100% 100%;
 background-attachment: fixed;
@@ -473,26 +513,30 @@ position: relative;
 margin: 0 auto;
 width: 100%;
 height: auto;
+padding-bottom: 30px;
 background-color: #000;
 }
 
-#notreHistoire{
+#notreConcept{
 display: flex;
 flex-wrap: wrap;
 }
-/*
-#Team{
-display: flex;
-flex-wrap: wrap;
-} */
 
-.h2Histoire{
+.h2Concept{
 display: flex;
 justify-content: center;
 margin: 20PX auto;
-font-size: 2.6vw;
+font-size: 45px;
 width: 100%;
 }
+
+.h4Concept{
+  display: flex;
+  justify-content: center;
+  margin: 10PX auto;
+  font-size: 25px;
+  width: 100%;
+  }
 
 hr{
 margin: 20px auto;
@@ -500,31 +544,40 @@ width: 30%;
 height: 0px;
 border: rgba(193, 22, 38, 1) 2px solid;
 }
-.pageLeftHistoire{
-width: 50%;
+.pageLeftConcept{
+width: 100%;
 }
-.imageHistoire{
+.imageConcept{
 margin: 0 auto;
 padding: 0;
-width: 50%;
+width: 100%;
 }
-.imageHistoire img{
-margin-left: 90px;
-width: 50%;
+.imageConcept img{
+  width: 10%;
+  display: flex;
+  margin: 20px auto;
 }
-.pageLeftHistoire p {
-margin: 0 auto;
-width: 50%;
-font-size: 1.2vw;
-line-height: 1.2vw;
-padding: 15px 0;
+.pageLeftConcept p {
+  font-family: "MontserratRegular";
+  margin: 10px auto;
+  text-align: justify;
+  letter-spacing: 1.2px;
+  width: 50%;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 15px 0;
+  }
+
+  .pageLeftConcept p span{
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 30px; 
+  }
+.pageRightConcept{
+  width: 50%;
 }
 
-.pageRightHistoire{
-width: 50%;
-}
-
-.pageRightHistoire p {
+.pageRightConcept p {
 margin: 0 auto;
 font-size: 1.2vw;
 line-height: 1.2vw;
@@ -532,107 +585,25 @@ padding: 15px 0;
 text-align: justify;
 }
 
-/* TEAM */
+/* LOCALISATION */
 
-.item1{
-margin: 50px auto;
-width:100%;
-transform: translate3d(0, -1px, 0);
-overflow: hidden;
+#localisation{
+  margin-bottom: 50px;
 }
-
-
-.item__image1{
-display: flex;
-align-items: center;
-/* flex-wrap: nowrap; */
-margin-left : 10%;
-width: 80%;
-}
-
-.item__image1 h3{
-text-align: center;
-margin-left: 30px;
-font-size: 2vw;
-}
-
-.item__image1 p{
-margin-left: 30px;
-font-size: 2vw;
-}
-.h2Team{
-display: flex;
-justify-content: center;
-margin: 20PX auto;
-font-size: 2.6vw;
-width: 100%;
-}
-
-
-
-#NosPartenaires{
-display: flex;
-flex-wrap: wrap;
-}
-
-.h2Partenaires{
-display: flex;
-justify-content: center;
-margin: 20PX auto;
-font-size: 2.6vw;
-width: 100%;
-}
-
-.partenaires_column{
-width: 25%;
-margin: 20px auto;
-padding: 0;
-
-}
-
-.partenaires_column img{
-display: flex;
-justify-content: center;
-margin: 0 auto;
-}
-
-.partenaires_column h4{
-text-align: center;
-font-size: 1.6vw;
-}
-
-.partenaires_column p{
-margin: 20px auto;
-text-align: center;
-font-size: 1.2vw;
-line-height: 1.4vw;
-width: 50%;
-}
-
-/*
-.Team{
-position: absolute;
-top : 200px;
-right : 0;
-margin: 0 auto;
-width: 1440px;
-height: 400px;
-background-color: #FFF;
-}
-*/
-
 
 /* footer */
 
 a{
 text-decoration: none;
+color: whitesmoke;
 }
 
 
 footer{
-width : 100%;
-background-color: rgb(96, 97, 97);
-position: relative;
+  font-family: 'MontserratRegular';
+  width : 100%;
+  background-color: rgb(96, 97, 97);
+  position: relative;
 }
 
 .PageDown{
@@ -675,7 +646,7 @@ padding : 5px;
 }
 
 .lineV{
-margin-top: 20px;
+margin:20px;
 height:150px;
 color: black;
 border-right: solid;
@@ -684,14 +655,54 @@ border-right-width: 1px;
 
 .lineH{
 position: absolute;
-width: 100%;
 height:1px;
 border-top: solid;
 border-top-color:  black;
 border-top-width: 1px;
 border-bottom: solid;
 border-bottom-color: black;
-margin-top: 300px;
+/* margin-top: 300px; */
+}
+
+
+
+/* instagram */
+#gallery{
+  margin: 20px auto;
+}
+
+.gallery-disposition{
+  margin: 20px auto;
+  width: 100%; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+
+.h2Gallery{
+  display: flex;
+  justify-content: center;
+  margin: 20PX auto;
+  font-size: 45px;
+  width: 100%;
+  margin: 0px auto;
+  padding: 10px 0px;
+  background-color: #000;
+  }
+
+  .instaimg img{
+    margin: 15px;
+    width: 275px;
+    height: 275px;
+  }
+  
+
+.instaimg img:hover {
+opacity:0.7;
+-moz-opacity:0.7;
+-webkit-opacity:0.7;
 }
 
 /* PAGE CONTACT*/
@@ -851,7 +862,7 @@ display: none
 
 /* @media  screen and  (orientation: landscape) and (min-width: 768px) and (max-width: 1024px) { */
 
-@media  screen and (min-width: 168px) and (max-width: 1024px) {
+@media  screen and (min-width: 168px) and (max-width: 1080px) {
 nav {
   display: flex;
   justify-content: space-between;
@@ -995,17 +1006,19 @@ transform: translate3d(0,0,0 )
 }
 
 .carousel__prev{
-position: absolute;
-width: 35px;
-height: 35px;
-background-size: 15px 15px;
+  position: absolute;
+  z-index: 100;
+  width: 35px;
+  height: 35px;
+  background-size: 15px 15px;
 
 }
 .carousel__next{
-position: absolute;
-width: 35px;
-height: 35px;
-background-size: 15px 15px;
+  z-index: 100;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  background-size: 15px 15px;
 }
 
 .carousel__next:hover, .carousel__prev:hover{
@@ -1019,9 +1032,15 @@ opacity: 0;
 opacity: 0;
 }
 .containerResevation{
-position: absolute;
-margin: 0 10%;
-width: 80%;
+margin: 0 auto;
+width: 100%;
+}
+
+/* Concept */
+
+.h2NotreFormule, .h2Livraison, .h2Glocalisation, .h2Concept, .h2Gallery{
+  margin: 20PX auto;
+  font-size: 30px;
 }
 
 }
@@ -1058,42 +1077,44 @@ div[class^="block1"]{
 
 
 
-/* instagram */
-#gallery{
-  margin: 20px auto;
-  background-image: url(../images/caniumCB.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 80%; 
-  background-attachment: fixed;
-}
 
-.gallery-disposition{
-  margin: 20px auto;
-  width: 100%; 
+
+
+
+/* MAP */
+.localisation_container{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-
 }
 
-.h2Gallery{
-  display: flex;
-  justify-content: center;
-  margin: 20PX auto;
-  font-size: 2.6vw;
-  width: 100%;
-  margin: 0px auto;
-  padding: 10px 0px;
-  background-color: #000;
-  }
+.localisation_container_p{
+  margin: 75px auto; 
+}
 
-.instaimg img {
-margin-bottom:30px;
+.localisation_container_p p{
+  font-family: 'MontserratRegular';
+  font-size: 20px; 
+  margin: 40px 0;
 }
-.instaimg img:hover {
-opacity:0.7;
--moz-opacity:0.7;
--webkit-opacity:0.7;
+
+#map{ /* la carte DOIT avoir une hauteur sinon elle n'apparaît pas */
+  margin: 40px 80px;
+  width: 50%;
+  height:400px;
 }
+
+
+
+
+/* 
+color: #ccc;
+background-image: radial-gradient( #b14b56, rgba(255, 141, 141, 0.42));
+border-radius: 7px;
+padding: 20px;
+transition: background-color 1s;
+}
+
+.linkUber a:hover{
+background-color : #c21626;
+transition: background-color 1s;
+
+} */
