--- a/styles/main.css
+++ b/styles/main.css
@@ -225,6 +225,10 @@ opacity: 0;
   color: #c21626;
   letter-spacing: 2px;
 }
+.containerResevation h4 span{
+  font-family: "MontserratRegular";
+  font-size: 38px;
+}
 .containerResevation a {
   cursor: auto;
   letter-spacing: 1.2px;
@@ -287,6 +291,10 @@ padding-bottom: 50px;
   display: flex;
   justify-content: center;
 }
+.livraisonImage img{
+  width: 20%;
+}
+
 .linkUber{
   margin: 35px auto;
   display: flex;
@@ -316,7 +324,7 @@ padding-bottom: 50px;
 .background{
 margin: 0 auto;
 width: 100%;
-height: 1700px;
+height: 2000px;
 background: url("../images/image6.jpeg");
 background-size: 100% 100%;
 background-attachment: fixed;
@@ -326,6 +334,7 @@ margin: 0 auto;
 width: 100%;
 height: auto;
 background-color: #000;
+padding-bottom: 10px;
 }
 #menu{
 display: flex;
@@ -335,7 +344,8 @@ margin-bottom:  50px;
 .h2NotreFormule, .h2Livraison, .h2Glocalisation{
 display: flex;
 justify-content: center;
-margin: 20PX auto;
+padding: 20px 0 20px 0 ;
+margin: 0 auto;
 font-size: 45px;
 width: 100%;
 }
@@ -392,6 +402,9 @@ line-height: 45px;
   width: 30px;
 }
 .prix_menu1, .prix_menu2, .prix_menu3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 20px auto;
   width: 90px;
   height: 90px;
@@ -400,9 +413,8 @@ line-height: 45px;
 }
 
 .prix_menu1 p, .prix_menu2 p, .prix_menu3 p{
-text-align: center;
-margin :20px auto;
-font-size: 26px;
+  text-align: center;
+  font-size: 26px;
 }
 
 
@@ -462,7 +474,7 @@ padding: 0;
 width: 100%;
 }
 .imageConcept img{
-  width: 10%;
+  width: 8%;
   display: flex;
   margin: 20px auto;
 }
@@ -494,11 +506,6 @@ padding: 15px 0;
 text-align: justify;
 }
 
-/* LOCALISATION */
-
-#localisation{
-  margin-bottom: 50px;
-}
 
 /* footer */
 
@@ -590,13 +597,12 @@ border-bottom-color: black;
 
 }
 
-.h2Gallery{
+.h2Gallery, .h2faq{
   display: flex;
   justify-content: center;
   margin: 20PX auto;
   font-size: 45px;
   width: 100%;
-  margin: 0px auto;
   padding: 10px 0px;
   background-color: #000;
   }
@@ -637,6 +643,81 @@ opacity:0.7;
   width: 50%;
   height:400px;
 }
+
+/* FAQ */
+main{
+  color: #ebebeb;
+  font-family: 'MontserratRegular';
+  position: relative;
+  width: 80%;
+  height: 100%;
+  margin: 0px auto;
+  background-color: #000;
+}
+.cont_a{
+  margin: 40px;
+}
+.cont_a a {
+  font-size: 20px;
+  text-decoration: none;
+  color: #ebebeb
+}
+.cont_faq{
+  font-family: "Rosarina";
+  font-size: 50px;
+  display: flex;
+  justify-content: center
+}
+ul{
+  margin: 10px;
+  margin-bottom: 50px;
+  list-style: none;
+}
+
+ul li{
+  padding: 20px 0px 20px 0px;
+}
+
+ul li div{
+  height: 0;
+  overflow: hidden;
+  background: #c01626;
+  padding: 0px 40px;
+  border-top: thin solid #ebebeb;
+  border-bottom: thin solid #ebebeb;
+  line-height: 22px;
+  transition: height 1s;
+  font-size: 18px;
+}
+h3::before{
+  content: '';
+  display: inline-block;
+  margin-right: 15px;
+  height: 10px;
+  width: 10px;
+  border-radius:50%;
+  background-color: black;
+}
+
+h3::after{
+  content: url('../images/down-arrow.png');
+  position: absolute;
+  height: 10px;
+  transform: rotate(180deg);
+  transition: linear all 0.5s;
+  right: 30px;
+}
+
+.click h3::after{
+  transform: rotate(0deg);
+}
+
+.click div {
+  height: 100px;
+}
+
+
+
 
 /* PAGE CONTACT*/
 
