--- a/styles/main.css
+++ b/styles/main.css
@@ -550,7 +550,7 @@ flex-wrap: nowrap;
 }
 
 .LinkPage ul li{
-margin: 5%;
+margin: 20px;
 }
 
 
@@ -655,12 +655,20 @@ main{
   background-color: #000;
 }
 .cont_a{
-  margin: 40px;
+  margin-left: 40px;
+  margin-top: 20px;
 }
 .cont_a a {
   font-size: 20px;
+  text-transform: uppercase;
   text-decoration: none;
-  color: #ebebeb
+   color: #ebebeb;
+  transition: color 0.4s ease;
+
+}
+.cont_a a:hover{
+  color: #c21626;
+  transition: color 0.4s ease;
 }
 .cont_faq{
   font-family: "Rosarina";
@@ -668,17 +676,17 @@ main{
   display: flex;
   justify-content: center
 }
-ul{
+main ul{
   margin: 10px;
   margin-bottom: 50px;
   list-style: none;
 }
 
-ul li{
+main ul li{
   padding: 20px 0px 20px 0px;
 }
 
-ul li div{
+main ul li div{
   height: 0;
   overflow: hidden;
   background: #c01626;
@@ -689,7 +697,7 @@ ul li div{
   transition: height 1s;
   font-size: 18px;
 }
-li h3::before{
+main ul li h3::before{
   content: '';
   display: inline-block;
   margin-right: 15px;
@@ -699,7 +707,7 @@ li h3::before{
   background-color: black;
 }
 
-li h3::after{
+main ul li h3::after{
   content: url('../images/down-arrow.png');
   position: absolute;
   height: 10px;
@@ -724,23 +732,26 @@ li h3::after{
 
 /* block de tete */
 
+
 .head_block{
 position: relative;
 display: flex;
 justify-content: center;
+font-family: 'MontserratRegular';
 }
 
 .head_block .head_black{
-height: 300px;
+height: 150px;
 width: 100%;
 background: black;
 }
 
 .head_block h2{
 position: absolute;
-color: crimson;
-margin-top: 110px;
+color: #ebebeb;
+margin-top: 70px;
 font-size: 35px;
+font-family: 'MontserratRegular';
 }
 
 /*titraille*/
@@ -750,7 +761,6 @@ width: 960px;
 margin: 0 auto;
 display: flex;
 justify-content: space-around;
-margin-top: 35px;
 }
 
 .line_horizon{
@@ -761,20 +771,20 @@ margin-top: 50px;
 border-top-width: 0.5px;
 }
 
-.head_welcome h3{
-font-style: italic;
-font-size: 25px;
-margin-top: 35px;
-}
 
 
 /* design du formulaire */
 
 .form_title h4{
-font-size: 20px;
+  margin: 32px auto;
+  font-size: 24px;
+  font-family: 'MontserratRegular';
+  text-transform: uppercase;
+  color:#c01626;
 }
 
-input[type=text], [type=email], [type=number], [type=data]{
+input[type=text], [type=email], [type=number], [type=date]{
+font-family: 'MontserratRegular';
 width: 100%;
 padding: 12px 20px;
 margin: 8px 0;
@@ -785,6 +795,7 @@ box-sizing: border-box;
 }
 
 #msg{
+font-family: 'MontserratRegular';
 width: 100%;
 padding: 12px 20px;
 margin: 8px 0;
@@ -795,10 +806,12 @@ box-sizing: border-box;
 }
 
 label{
+font-family: 'MontserratRegular';
 font-size: 13px;
 }
 
 .form_title p{
+font-family: 'MontserratRegular';
 font-size: 15px;
 }
 
@@ -825,43 +838,98 @@ justify-content: center;
 margin: 30px;
 }
 
-button{
-height:30px;
+#button{
+height:50px;
+font-size: 20px;
 width: 150px;
-border-radius: 15px;
-background-color:black;
+border-radius: 30px;
+background-color:white;
 border-color: black;
-color: white;
-transition: color 0.4s ease,  transform 0.4s;
+color: black;
+transition: color 0.4s ease, transform 0.4s, background-color 0.4s ease;
 }
 
-button:hover{
-color: red;
+#button:hover{
+color:white;
+background-color: #c01626;
 border-radius: 30px;
 transform: scale(1.2);
-transition: color 0.4s ease, transform 0.4s;
+transition: color 0.4s ease, transform 0.4s, background-color 0.4s ease;
 }
 
 /* design de la section droite avec les infos */
 
 .info_supp{
-width: 480px;
+  border-left : dashed white 3px; 
+  margin-left: 50px; 
+  width: 280px;
 }
 
 .resto_data{
-width: 200px;
-padding-left: 130px;
-padding-top: 80px;
+  font-family: 'MontserratRegular';
+  width: 460px;
+  padding-left: 50px;
+}
+.resto_data h4{
+  margin: 32px auto;
+  font-size: 24px;
+  color:#589442;
+  text-transform: uppercase;
+}
+.resto_data p{
+    width: 200px;
+    margin-bottom: 0; 
+    font-family: 'MontserratRegular';
+    font-size: 15px;
+}
+.resto_data a {
+  font-size: 20px;
+  transition: color 0.4s ease;
+}
+.resto_data a:hover {
+  transition: color 0.4s ease;
+  color:#589442;
+}
+
+.form_title hr{
+  margin: 30px auto;
+  width: 100%;
+  border: 1px solid #589442;
+}
+
+.resto_data img{
+  /* display: flex;
+  justify-content: center; */
+  width: 80%;
 }
 
 .open_hour{
-width: 200px;
-padding-left: 130px;
-padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 460px;
+  padding-left: 50px;
+  padding-top: 10px;
+}
+.open_hour h3{
+  margin-top: 0px; 
+  font-size: 28px;
+}
+.open_hour p{
+  margin: 15px ;
+  font-size : 20px;
 }
 
 .open_hour p:last-of-type{
-color: red;
+  font-family: 'MontserratRegular';
+  color: red;
+}
+
+#para{
+  display: flex;
+  font-size: 30px;
+  justify-content: center;
+  margin: 30px auto;
 }
 
 /*FIN PAGE CONTACT*/
